test/netlist/error/freevar-index.bop
#include <stdlib.bop>

Main(a:[N]) = s
where
  s = And[N](a[0..N - 1]);
end where;
